--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/gilpev/OnlineClinicWebhook#readme",
   "dependencies": {
+    "@nearform/sql": "^1.9.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
